# playerone-ai

./: Dockerfile.stable-retro  README.md  pyproject.toml
docs/: architecture.md  interfaces.md
docs/runtime-research/: nes-py.md  stable-retro-docker.md  stable-retro.md
playerone_ai/: __init__.py
playerone_ai/backends/: __init__.py  nes.py  stable_retro.py
playerone_ai/controls/: __init__.py  controller_state.py
scripts/: smoke_test_nes.py  smoke_test_stable_retro.py
