[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playerone-ai"
version = "0.1.0"
description = "Runtime layer for letting AI agents play video games through reusable interfaces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
stable-retro = [
  "stable-retro>=0.9.9",
  "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["playerone_ai*"]
